# pokedex-django

./: .editorconfig  .env.local  .env.production  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
accounts/: base_user.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py  views.py
docker/: docker-compose.yml
docker/mysql/init/: init.sql
docker/python/: Dockerfile
pokedex/: models.py  urls.py  views.py
pokedex/fixtures/: pokedex.json
pokedex/migrations/: 0001_initial.py
templates/: base.html  index.html
templates/accounts/: login.html
templates/pokedex/: index.html
